--- a/src/css/Movie.css
+++ b/src/css/Movie.css
@@ -14,6 +14,10 @@
     width: 100%;
 }
 
+img.movie-backdrops{
+    transition: 'opacity 1s ease-in-out';
+}
+
 .details{
     padding: 15px;
     display: flex;
